istio-1.28.2/ingress-addons/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: addons-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prometheus.uday.corp"
    - "grafana.uday.corp"
    - "jaeger.uday.corp"
    - "kiali.uday.corp"
